@@ -1,3 +1,8 @@
+2011-11-20  kitone  <kitone@gna.org>
+
+	* src/subtitleview.cc:
+	Fix bug #19023 : Assenseur / ligne active. Center in the view the current selection.
+
 2011-11-19  kitone  <kitone@gna.org>
 
 	* plugins/subtitleformats/timedtextauthoringformat1/timedtextauthoringformat1.cc:
